--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">UniGame</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="individual_mode">Modo Individual</string>
+    <string name="tournament_mode">Modo Torneo</string>
+    <string name="download_questions">Bajar Preguntas</string>
+    <string name="use_questions">Usar Preguntas</string>
+
 </resources>
