--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">UniGame</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_usar_db_preguntas">Usar DB Preguntas</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="individual_mode">Modo Individual</string>
