--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_activity_usar_db">Usar DB Preguntas</string>
     <string name="title_activity_crear_db">Crear DB</string>
     <string name="title_activity_bajar_db">Bajar DB</string>
+    <string name="title_activity_modo_individual">Modo Individual</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="individual_mode">Modo Individual</string>
@@ -19,5 +20,5 @@
     <string name="etxt_tags_preguntas">Tags preguntas</string>
     <string name="btn_create">Crear</string>
     <string name="btn_browse">Buscar</string>
-
+    <string name="txt_individual_mode">Elige las preguntas de la partida</string>
 </resources>
