--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_activity_bajar_db">Bajar DB</string>
     <string name="title_activity_modo_individual">Modo Individual</string>
     <string name="title_activity_lista_preguntas">Lista Preguntas</string>
+    <string name="title_activity_editar_pregunta">Editar Pregunta</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="individual_mode">Modo Individual</string>
