Interfaz y controlador JuegoIndividual.java

--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_carreras">Carreras</string>
     <string name="title_activity_asignaturas">Asignaturas</string>
     <string name="title_activity_dbs">Bases de Datos</string>
+    <string name="title_activity_juego_individual">Individual</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="individual_mode">Modo Individual</string>
@@ -28,7 +29,9 @@
     <string name="btn_browse">Buscar</string>
     <string name="txt_individual_mode">Selcciona Preguntas</string>
     <string name="btn_add_question">Añadir pregunta</string>
+    <string name="btn_confirmar_respuesta">Confirmar</string>
     <string name="txt_universities">Universidades</string>
+    <string name="txt_juego_individual">Individual</string>
     <string name="txt_carrer">Carrera</string>
     <string name="txt_subject">Asignatura</string>
     <string name="txt_dbs">Bases de Datos</string>
