--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="title_activity_asignaturas">Asignaturas</string>
     <string name="title_activity_dbs">Bases de Datos</string>
     <string name="title_activity_juego_individual">Individual</string>
+    <string name="title_activity_login">Login</string>
+
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="individual_mode">Modo Individual</string>
@@ -36,4 +38,11 @@
     <string name="txt_subject">Asignatura</string>
     <string name="txt_dbs">Bases de Datos</string>
     <string name="txt_tiempo_nombre">Tiempo:</string>
+    
+    <!-- String LoginDialog -->
+    <string name="hint_id_login">Usuario</string>
+    <string name="hint_id_password">Contraseña</string>
+    <string name="btn_confirmar">Confirmar</string>
+    <string name="btn_cancelar">Cancelar</string>
+    <string name="btn_login">Login</string>
 </resources>
