--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="title_activity_login">Login</string>
     <string name="title_activity_cargar">Cargando...</string>
 
+    <string name="title_activity_estadisticas_partida">Resultado</string>
+    <string name="end">Terminar partida</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="individual_mode">Modo Individual</string>
