Arreglado "Crear pregunta, borrar y volver". "acabar juego y volver", "crear pregunta duplicación"

--- a/android-project/UniGame/app/src/main/res/values/strings.xml
+++ b/android-project/UniGame/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="etxt_tags_preguntas">Tags preguntas</string>
     <string name="btn_create">Crear</string>
     <string name="btn_browse">Buscar</string>
-    <string name="txt_individual_mode">Selcciona Preguntas</string>
+    <string name="txt_individual_mode">Selecciona Preguntas</string>
     <string name="btn_add_question">Añadir pregunta</string>
     <string name="btn_confirmar_respuesta">Confirmar</string>
     <string name="txt_universities">Universidades</string>
